Personal img edit

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <img src="images/personal-img.jpg" alt="personal-img" draggable="false">
+                    <img src="images/personal-img1.jpg" alt="personal-img" draggable="false">
                 </div>
                 <div class="team-div2">
                     <h2 class="subtitle">KAREM MOHAMED</h2>
@@ -300,7 +300,7 @@
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <img src="images/personal-img.jpg" alt="personal-img" draggable="false">
+                    <img src="images/personal-img1.jpg" alt="personal-img" draggable="false">
                 </div>
                 <div class="team-div2">
                     <h2 class="subtitle">KAREM MOHAMED</h2>
@@ -314,7 +314,7 @@
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <img src="images/personal-img.jpg" alt="personal-img" draggable="false">
+                    <img src="images/personal-img1.jpg" alt="personal-img" draggable="false">
                 </div>
                 <div class="team-div2">
                     <h2 class="subtitle">KAREM MOHAMED</h2>
