Personal img edit 2

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="content">
             <div class="m-item">
                 <div class="m-div1">
-                    <img src="images/Personal-img.jpg" alt="Personal-img" draggable="false">
+                    <img src="images/img.png" alt="Personal-img" draggable="false">
                     <h3>Karem Mohamed</h3>
                     <p>WEB-DEVELOPER</p>
                 </div>
@@ -264,7 +264,7 @@
             </div>
             <div class="m-item">
                 <div class="m-div1">
-                    <img src="images/Personal-img.jpg" alt="Personal-img" draggable="false">
+                    <img src="images/img.png" alt="Personal-img" draggable="false">
                     <h3>Karem Mohamed</h3>
                     <p>GRAPHIC-DESIGNER</p>
                 </div>
@@ -286,7 +286,7 @@
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <img src="images/personal-img1.jpg" alt="personal-img" draggable="false">
+                    <img src="images/img.png" alt="personal-img" draggable="false">
                 </div>
                 <div class="team-div2">
                     <h2 class="subtitle">KAREM MOHAMED</h2>
@@ -300,7 +300,7 @@
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <img src="images/personal-img1.jpg" alt="personal-img" draggable="false">
+                    <img src="images/img.png" alt="personal-img" draggable="false">
                 </div>
                 <div class="team-div2">
                     <h2 class="subtitle">KAREM MOHAMED</h2>
@@ -314,7 +314,7 @@
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
-                    <img src="images/personal-img1.jpg" alt="personal-img" draggable="false">
+                    <img src="images/img.png" alt="personal-img" draggable="false">
                 </div>
                 <div class="team-div2">
                     <h2 class="subtitle">KAREM MOHAMED</h2>
